# Quantum-Beat_Photoelectron-Imaging_Spectroscopy_of_Xe_in_the_VUV

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
dataLocal/: Xe_data_table_fixedFractions.ods  xeAdvFit_09-07-24_13-32-02.h5
doc-source/: 0.01_data_download_and_preliminaries_050624.ipynb  0.01_data_download_and_preliminaries_050624.md  4.01_hyperfine_beats_modelling_060624.ipynb  4.01_hyperfine_beats_modelling_060624.md  4.02_fitting_intro_page.ipynb  4.02_fitting_intro_page.md  4.02_hyperfine_beats_basic_fitting_140624.ipynb  4.02_hyperfine_beats_basic_fitting_140624.md  4.03-redux_hyperfine_beats_adv_fitting_190624.ipynb  4.03-redux_hyperfine_beats_adv_fitting_190624.md  5.01_qb_densityMatrix_legacy_150724.ipynb  5.01b_qb_densityMatrix_TKQ_260525.md  _config.yml  _toc.yml  intro.md
doc-source/extras/: CONTRIBUTING.md  README.md
doc-source/references/: literature_notes_220624.ipynb  literature_notes_220624.md  xe_hyperfine_paper_refs_2018.bib
notebooks/: jupytext.toml  qbanalysis_template.ipynb  qbanalysis_template.md
notebooks/0_data_exploration/: 0.01_data_download_and_preliminaries_050624.md  Xe_atomic_data_tests_080624.ipynb  uncetainties_pkg_tests_080624.ipynb
notebooks/4_modelling/: 4.01_hyperfine_beats_modelling_060624.ipynb  4.02_fitting_intro_page.ipynb  (+14 more)
qbanalysis/: __init__.py  adv_fitting.py  basic_fitting.py  dataset.py  features.py  getOSFdata.py  hyperfine.py  photoionization.py  plots.py
references/: literature_notes_220624.ipynb  literature_notes_220624.md  xe_hyperfine_redux_2024.bib
(+12 files in other folders)
