[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "qbanalysis"
version = "0.0.1"
description = "Exploration and analysis work for \"Quantum-beat photoelectron-imaging spectroscopy of Xe in the VUV\" manuscript and follow-up work."
authors = [
  { name = "Paul Hockett" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["qbanalysis"]
force_sort_within_sections = true
